docs: create & update user
